<resources>
    <string name="app_name">Notes</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="button_change_date">Change Date</string>
    <string name="date_format" translatable="false">dd.MM.yyyy</string>
    <string name="add_new_note">Add new Note</string>
    <string name="search">search</string>
    <string name="sort">Sort By Date</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="nav_header_text" translatable="false">Aleksey</string>
    <string name="navigation_drawer_open" translatable="false">Open nav drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close nav drawer</string>
    <string name="turn_on_dark_theme">Turn on dark theme</string>
    <string name="turn_on_system_theme">Turn on system theme</string>
    <string name="set_text_size_settings">Text Size</string>
    <string name="add_to_favorite_context_menu">Add to Favorite</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_view_settings">Note View</string>
    <string name="save_data">Save Data</string>
    <string name="hint_note_title">Note Title</string>
    <string name="hint_note_text">Note Text</string>
    <string name="hint_note_date">Note Date</string>
    <string name="remove_note">Remove Note</string>
    <string name="save_settings">Save Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_out">Log Out</string>
    <string name="description_about_app">The application for write notes</string>
    <string name="current_app_version">Current Application Version</string>
    <string name="window_app_settings">Window App Settings</string>
    <string name="facebook_app_id" translatable="false">547166340557982</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb547166340557982</string>
    <string name="facebook_client_token" translatable="false">4d2b544493accc13af4bdd8eeb2707c0</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_dialog_delete">Do you really want to delete this note?</string>
    <string name="confirm_dialog_title">Delete Note</string>
    <string name="confirm_delete_no">No</string>
    <string name="confirm_delete_yes">Yes</string>
    <string name="label_description">Description:</string>
    <string name="label_date_of_creating">Date of creating:</string>
    <string name="label_title">Title:</string>
    <string name="label_note_to_delete">Note to delete:</string>
</resources>