<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/action_menu_nav"
        android:checkableBehavior="all">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            android:orderInCategory="5"/>

        <item
            android:id="@+id/action_about_app"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about_app"
            android:orderInCategory="5" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/log_out"
            android:orderInCategory="10"/>
    </group>

</menu>