<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/app_title_name_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_in_about_app"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_about_app"
        android:textSize="@dimen/about_app_description_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_in_about_app"/>

    <TextView
        android:id="@+id/current_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/current_app_version_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_in_about_app"
        tools:text="Current version: 1.0v"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_window_app_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/window_app_settings"/>

</LinearLayout>