<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_dialog_delete"
        android:layout_margin="@dimen/confirm_dialog_margin"
        android:textSize="@dimen/confirm_dialog_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/confirm_dialog_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_note_to_delete"
            android:textSize="@dimen/confirm_dialog_text_size"/>

        <TextView
            android:id="@+id/confirm_dialog_title_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/confirm_dialog_text_size"
            tools:text="Title Note"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="@dimen/confirm_dialog_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_dialog_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/confirm_dialog_margin"
            android:backgroundTint="@android:color/darker_gray"
            android:textSize="@dimen/confirm_btn_text_size"
            android:text="@string/confirm_delete_no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_dialog_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/confirm_btn_text_size"
            android:text="@string/confirm_delete_yes"/>

    </LinearLayout>

</LinearLayout>